--- a/index.html
+++ b/index.html
@@ -420,6 +420,13 @@
 
          </section>
          <!-- Get In Touch section -->
+        <section class="container mx-auto px-8 lg:px-24 my-20">
+                <div class="flex flex-col justify-center items-center lg:max-w-[50%] mx-auto">
+                    <h2 class="common-head text-center">Get In Touch</h2>
+                    <p class="common-text">You can buy  update and latest item here.Our all products are world class.Also you can choose featured items </p>
+                </div>
+
+        </section>
         
     </main>
     <footer>
