product list updated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -128,7 +128,7 @@
                 <div class="space-y-4">
                     
                         <!-- 1st product -->
-                        <div class="  lg:flex gap-4 bg-white drop-shadow-md p-5">
+                        <div class="  lg:flex gap-4 bg-white drop-shadow-md p-5 rounded-xl">
                             <div class="flex justify-center ">
                                 <img src="images/5.png" alt="">
                             </div>
@@ -163,7 +163,7 @@
 
                         </div>
                         <!-- 2nd product -->
-                        <div class="lg:flex gap-4 bg-white drop-shadow-md p-5">
+                        <div class="lg:flex gap-4 bg-white drop-shadow-md p-5 rounded-xl">
                             <div class=" flex justify-center">
                                 <img src="images/7.png" alt="">
                             </div>
@@ -198,7 +198,7 @@
 
                         </div>
                         <!-- 3rd product -->
-                        <div class=" lg:flex gap-4 bg-white drop-shadow-md p-5">
+                        <div class=" lg:flex gap-4 bg-white drop-shadow-md p-5 rounded-xl">
                             <div class="flex justify-center">
                                 <img src="images/9.png" alt="">
                             </div>
@@ -233,7 +233,7 @@
 
                         </div>
                         <!-- 4th product -->
-                        <div class=" lg:flex gap-4 bg-white drop-shadow-md p-5">
+                        <div class=" lg:flex gap-4 bg-white drop-shadow-md p-5 rounded-xl">
                             <div class="flex justify-center">
                                 <img src="images/10.png" alt="">
                             </div>
@@ -274,7 +274,7 @@
                 <div class="space-y-4">
                     
                         <!-- 5th product -->
-                        <div class=" lg:flex gap-4 bg-white drop-shadow-md p-5">
+                        <div class=" lg:flex gap-4 bg-white drop-shadow-md p-5 rounded-xl">
                             <div class="flex justify-center">
                                 <img src="images/6.png" alt="">
                             </div>
@@ -309,7 +309,7 @@
 
                         </div>
                         <!-- 6th product -->
-                        <div class="lg:flex gap-4 bg-white drop-shadow-md p-5">
+                        <div class="lg:flex gap-4 bg-white drop-shadow-md p-5 rounded-xl">
                             <div class="flex justify-center">
                                 <img src="images/8.png" alt="">
                             </div>
@@ -344,7 +344,7 @@
 
                         </div>
                         <!-- 7th product -->
-                        <div class=" lg:flex gap-4 bg-white drop-shadow-md p-5">
+                        <div class=" lg:flex gap-4 bg-white drop-shadow-md p-5 rounded-xl">
                             <div class="flex justify-center">
                                 <img src="images/7.png" alt="">
                             </div>
@@ -379,7 +379,7 @@
 
                         </div>
                         <!-- 8th product -->
-                        <div class="lg:flex gap-4 bg-white drop-shadow-md p-5">
+                        <div class="lg:flex gap-4 bg-white drop-shadow-md p-5 rounded-xl">
                             <div class="flex justify-center">
                                 <img src="images/5.png" alt="">
                             </div>
