Banner section edited

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="style.css">
    
 
@@ -25,21 +26,21 @@
         <section class="container mx-auto px-8 lg:px-24 relative">
             <div class="carousel w-full rounded-lg lg:rounded-2xl ">
                 <div id="slide1" class="carousel-item relative w-full h-[65vh] object-cover">
-                  <img src="Images/1.png" class="w-full" />
+                  <img src="images/1.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a> 
                     <a href="#slide2" class="btn btn-circle">❯</a>
                   </div>
                 </div> 
                 <div id="slide2" class="carousel-item relative w-full h-[65vh] object-cover">
-                  <img src="Images/2.png" class="w-full" />
+                  <img src="images/2.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a> 
                     <a href="#slide3" class="btn btn-circle">❯</a>
                   </div>
                 </div> 
                 <div id="slide3" class="carousel-item relative w-full h-[65vh] object-cover">
-                  <img src="Images/3.png" class="w-full" />
+                  <img src="images/3.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a> 
                     <a href="#slide1" class="btn btn-circle">❯</a>
