professional section eidited

--- a/index.html
+++ b/index.html
@@ -62,28 +62,25 @@
                 <p class="common-text">Professional hockey developed in the United States and Canada around the turn of the 20th century.</p>
             </div>
             <!-- Rating area -->
-            <div class="my-10 lg:flex justify-center items-center gap-4 ">
-                <div class="relative flex flex-col justify-center items-center space-y-4">
-                    <img src="Images/red.svg" alt="">
-                    <h3 class="text-[#131318] font-extrabold text-3xl absolute top-10 left-64 lg:left-24">87%</h3>
+            <div class="my-10 lg:flex justify-center items-center gap-6 space-y-6">
+                <div class="flex flex-col justify-center items-center space-y-4">
+                    <div class="radial-progress rotate-180 text-[#FF4240]" style="--value:85;" role="progressbar"><span class="text-black font-extrabold text-2xl rotate-180">85%</span></div>
+                    
                     <h5 class="font-semibold text-xl">Prayer Facility</h5>
                     <p>we have lot's of feature for player</p>
                 </div>
-                <div class="relative flex flex-col justify-center items-center space-y-4">
-                    <img src="Images/yellow.svg" alt="">
-                    <h3 class="text-[#131318] font-extrabold text-3xl absolute top-10 left-64 lg:left-24">90%</h3>
+                <div class="flex flex-col justify-center items-center space-y-4">
+                    <div class="radial-progress rotate-180 text-[#49D293]" style="--value:95;" role="progressbar"><span class="text-black font-extrabold text-2xl rotate-180">95%</span></div>
                     <h5 class="font-semibold text-xl">Senior Player</h5>
                     <p>we have lot's of feature for player</p>
                 </div>
-                <div class="relative flex flex-col justify-center items-center space-y-4">
-                    <img src="Images/green.svg" alt="">
-                    <h3 class="text-[#131318] font-extrabold text-3xl absolute top-10 left-64 lg:left-24">95%</h3>
+                <div class="flex flex-col justify-center items-center space-y-4">
+                    <div class="radial-progress rotate-180 text-[#FFB546]" style="--value:90;" role="progressbar"><span class="text-black font-extrabold text-2xl rotate-180">90%</span></div>
                     <h5 class="font-semibold text-xl">Experienced Coach</h5>
                     <p>we have experienced Coach for player</p>
                 </div>
-                <div class="relative flex flex-col justify-center items-center space-y-4">
-                    <img src="Images/orange.svg" alt="">
-                    <h3 class="text-[#131318] font-extrabold text-3xl absolute top-10 left-64 lg:left-24">80%</h3>
+                <div class=" flex flex-col justify-center items-center space-y-4">
+                    <div class="radial-progress rotate-180 text-[#4C8DF1]" style="--value:80;" role="progressbar"><span class="text-black font-extrabold text-2xl rotate-180">80%</span></div>
                     <h5 class="font-semibold text-xl">Training Ground</h5>
                     <p>we have lot's of feature for player</p>
                 </div>
@@ -102,7 +99,7 @@
 
             </div>
             <div class="mt-10 grid grid-cols-1 lg:grid-cols-2 gap-6">
-                <div class="img-1 pl-10 pb-10 space-y-5 order-1" >
+                <div class="img-1  pl-10 pb-10 space-y-5 order-1" >
                     <h3 class="text-white font-extrabold text-3xl pt-24">Junior Program</h3>
                     <p class="text-white max-w-80">we have a junior hockey section to build future player. it's forms of hockey to move the ball </p>
                     <button class="btn text-white font-bold bg-[#FF4240] border-none px-5 py-2">Register Now </button>
@@ -111,7 +108,7 @@
                     <h3 class="text-white font-extrabold text-3xl pt-24">Teenager Program</h3>
                     <p class="text-white max-w-80">In our teenager section we hunt future talent and nursing them to grow as a future icon </p>
                     <button class="btn text-white font-bold bg-[#FF4240] border-none px-5 py-2">Register Now </button></div>
-                <div class="lg:col-span-2 pl-10 pb-10 space-y-5 w-full img-3  order-3">
+                <div class="lg:col-span-2  pl-10 pb-10 space-y-5 w-full img-3  order-3">
                     <h3 class="text-white font-extrabold text-3xl pt-24">Professional Program</h3>
                     <p class="text-white max-w-80">A hockey stick is a piece of sports equipment used by the players in all the forms of hockey to move the ball </p>
                     <button class="btn text-white font-bold bg-[#FF4240] border-none px-5 py-2">Register Now </button></div>
