--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Font awesome link -->
+    <script src="https://kit.fontawesome.com/3270e82b26.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="style.css">
    
@@ -419,11 +422,68 @@
          </section>
          <!-- Get In Touch section -->
         <section class="container mx-auto px-8 lg:px-24 my-20">
-                <div class="flex flex-col justify-center items-center lg:max-w-[50%] mx-auto">
+            <div class="flex flex-col justify-center items-center lg:max-w-[50%] mx-auto">
                     <h2 class="common-head text-center">Get In Touch</h2>
                     <p class="common-text">You can buy  update and latest item here.Our all products are world class.Also you can choose featured items </p>
                 </div>
+                <div class="grid grid-cols-1 lg:grid-cols-3 grid-rows-6 mt-16 gap-6">
+                    <!-- address part -->
+                    <div class="row-span-4 space-y-3 border rounded-xl p-10">
+                         <div class="bg-amber-50 rounded-lg shadow-md p-7">
+                            <img src="images/tel.png" alt="">
+                            <p class="common-text text-left mt-5">Phone Number :</p>
+                            <h3 class="font-bold mt-1">+02-65476534-87</h3>
+                         </div>   
+                         <div class="bg-lime-50 rounded-lg shadow-md p-7">
+                            <img src="images/mail.png" alt="">
+                            <p class="common-text text-left mt-5">Email :
 
+                            </p>
+                            <h3 class="font-bold mt-1">hockeys@support.com</h3>
+                         </div>   
+                         <div class="bg-sky-50 rounded-lg shadow-md p-7">
+                            <img src="images/map.png" alt="">
+                            <p class="common-text text-left mt-5">Location :</p>
+                            <h3 class="font-bold mt-1">152/1 Mohakhali Wireless Gate
+                            </h3>
+                          </div>   
+                    </div>
+                    <!-- form part -->
+                    <div class="col-span-2 row-span-4 border rounded-xl p-5">
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 p-3 ">
+                            <div class="flex flex-col">
+                                <label class="font-bold" for="">Your Name</label>
+                                <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs mt-2 border-none bg-slate-50" />
+                            </div>
+                            <div class="flex flex-col">
+                                <label class="font-bold" for="">Your Email</label>
+                                <input type="text" placeholder="Enter your email" class="input input-bordered w-full max-w-xs mt-2 border-none bg-slate-50" />
+                            </div>
+                            <div class="flex flex-col">
+                                <label class="font-bold" for="">Subject</label>
+                                <input type="text" placeholder="Enter your Subject" class="input input-bordered w-full max-w-xs mt-2 border-none bg-slate-50" />
+                            </div>
+                            <div class="flex flex-col">
+                                <label class="font-bold" for="">Phone Number</label>
+                                <input type="text" placeholder="Enter your Phone Number" class="input input-bordered w-full max-w-xs mt-2 border-none bg-slate-50" />
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-4 p-3">
+                            <label class="font-bold" for="">Message :</label>
+                            <textarea class="textarea textarea-bordered lg:h-52 w-full " placeholder="Message"></textarea>
+                        </div>
+                        <button class="btn  mt-8  text-white font-bold bg-[#FF4240] border-none w-full px-5 py-2 btn-secondary">Send Message</button>
+
+                    </div>
+                    <div class="col-span-3 bg-slate-50 rounded-xl shadow-md flex flex-col justify-center items-center">
+                        <h4 class="font-extrabold text-2xl">Social Media</h4>
+                        <div class="text-2xl space-x-4 mt-3 cursor-pointer">
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-square-instagram"></i>
+                            <i class="fa-brands fa-x-twitter"></i>
+                            <i class="fa-brands fa-github"></i></div>
+                    </div>
+                </div>
         </section>
         
     </main>
