Get in touch sec responsive done

--- a/index.html
+++ b/index.html
@@ -425,10 +425,9 @@
             <div class="flex flex-col justify-center items-center lg:max-w-[50%] mx-auto">
                     <h2 class="common-head text-center">Get In Touch</h2>
                     <p class="common-text">You can buy  update and latest item here.Our all products are world class.Also you can choose featured items </p>
-                </div>
-                <div class="grid grid-cols-1 lg:grid-cols-3 grid-rows-6 mt-16 gap-6">
+                <div>
                     <!-- address part -->
-                    <div class="row-span-4 space-y-3 border rounded-xl p-10">
+                    <div class="lg:row-span-4 space-y-3 border rounded-xl p-2 lg:p-10 order-1">
                          <div class="bg-amber-50 rounded-lg shadow-md p-7">
                             <img src="images/tel.png" alt="">
                             <p class="common-text text-left mt-5">Phone Number :</p>
@@ -449,7 +448,7 @@
                           </div>   
                     </div>
                     <!-- form part -->
-                    <div class="col-span-2 row-span-4 border rounded-xl p-5">
+                    <div class="lg:col-span-2 lg:row-span-4 lg:border rounded-xl p-5 order-2">
                         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 p-3 ">
                             <div class="flex flex-col">
                                 <label class="font-bold" for="">Your Name</label>
