Claint question section edited

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
          </section>
          <!-- Product section -->
-         <section class="container mx-auto px-8 lg:px-24 my-20">
+         <section class="container mx-auto px-4 lg:px-24 my-20">
             <div class="flex flex-col justify-center items-center lg:max-w-[50%] mx-auto">
                 <h2 class="common-head text-center">Our New Products</h2>
                 <p class="common-text">You can buy  update and latest item here.Our all products are world class.Also you can choose featured items </p>
@@ -455,10 +455,10 @@
                 <h2 class="common-head text-center">Clients Question</h2>
                 <p class="common-text">Our happy clint have some common question regarding our services and featured items. we are trying to answer them </p>
             </div>   
-            <div>
+            <div class="border rounded-xl mt-4">
                 <div class="hero min-h-screen bg-base-50">
                     <div class="hero-content flex-col lg:flex-row">
-                      <img src="images/11.png" class="max-w-sm rounded-lg shadow-md" />
+                      <img src="images/11.png" class="lg:max-w-sm rounded-lg shadow-md" />
                       <!-- accordion -->
                         <div class=" flex flex-col gap-1">
                             <div class="collapse collapse-plus bg-base-200">
